# CopilotKitMono

./: .gitignore  .lfsconfig  .nxignore  AGENTS.md  CLAUDE.md  README.md  mono.config.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ag-ui/integrations/adk-middleware/python/: CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  README.md  STREAMING_FC_ARGS_RECONSTRUCTION.md  TOOLS.md  USAGE.md  pyproject.toml
ag-ui/integrations/adk-middleware/python/examples/: pyproject.toml  test_multimodal_live.py
ag-ui/integrations/adk-middleware/python/tests/: conftest.py  constants.py  test_a2ui_google_sdk.py  test_a2ui_import_hygiene.py  test_a2ui_tool.py  test_adk_130_invocation_id_override.py  test_adk_2_0_compat.py  test_adk_agent.py  test_adk_agent_memory_integration.py  test_adk_llm_flow_tool_override.py  test_agui_toolset_concurrency.py  test_capabilities.py  test_client_proxy_tool.py  test_client_proxy_toolset.py  test_concurrent_limits.py  test_context_handling.py  test_context_integration.py  test_duplicate_function_response.py  test_endpoint.py  test_endpoint_agent_resolver.py  test_endpoint_error_handling.py  test_event_translator_comprehensive.py  test_from_app_integration.py  test_hitl_resumption_text_output.py  test_integration_mixed_partials.py  test_issue_437_skip_summarization_integration.py  test_llmagent_hitl_confirmation.py  test_lro_filtering.py  test_lro_sse_id_remap.py  test_lro_sse_persistence.py  test_lro_tool_response_persistence.py  test_message_history.py  test_multi_instance_hitl.py  test_multi_lro_resume_gating.py  test_multi_turn_conversation.py  test_multimodal_e2e.py  test_non_streaming_text_with_lro_tool.py  test_output_schema_suppression.py  test_pending_tool_calls_gating.py  test_predictive_state.py  (+17 more)
ag-ui/integrations/ag2/python/examples/: README.md  pyproject.toml
ag-ui/integrations/agent-spec/python/: LICENSE-UPL  README.md  pyproject.toml
ag-ui/integrations/agent-spec/python/ag_ui_agentspec/: __init__.py  agent.py  agentspec_tracing_exporter.py  agentspecloader.py
ag-ui/integrations/agent-spec/python/examples/: README.md
ag-ui/integrations/agent-spec/python/tests/: conftest.py  test_agentspecloader.py  test_langgraph_runner.py  test_tracing_exporter.py
ag-ui/integrations/aws-strands/python/: README.md  pyproject.toml
ag-ui/integrations/aws-strands/python/examples/: README.md  pyproject.toml
ag-ui/integrations/aws-strands/python/tests/: test_a2ui_tool.py  test_client_proxy_tool.py  test_context_forwarding.py  test_messages_snapshot_message_id_rotation.py  test_multimodal_conversion.py  test_parallel_tool_call_handling.py  test_reasoning_events.py  test_session_manager.py  test_streaming_predict_state.py  test_template_agent_propagation.py  test_template_hooks_preservation.py  test_tool_call_parent_message_id.py
ag-ui/integrations/claude-agent-sdk/python/: README.md  pyproject.toml
ag-ui/integrations/claude-agent-sdk/python/ag_ui_claude_sdk/: __init__.py  adapter.py  config.py  endpoint.py  handlers.py  session.py  types.py  utils.py
ag-ui/integrations/claude-agent-sdk/python/examples/: .env.example  README.md  pyproject.toml  server.py
ag-ui/integrations/claude-agent-sdk/python/tests/: conftest.py  test_adapter.py  test_concurrency_integration.py  test_handlers.py  test_serialize_and_robustness.py  test_utils.py
ag-ui/integrations/crew-ai/python/: README.md  pyproject.toml
ag-ui/integrations/crew-ai/python/ag_ui_crewai/: _env.py  crews.py  dojo.py  endpoint.py  sdk.py
ag-ui/integrations/crew-ai/python/tests/: conftest.py  test_llm_timeout.py  test_task_cancellation.py
ag-ui/integrations/langgraph/python/: README.md  pyproject.toml
ag-ui/integrations/langgraph/python/ag_ui_langgraph/: __init__.py  a2ui_tool.py  agent.py  endpoint.py  interrupts.py  types.py  utils.py
ag-ui/integrations/langgraph/python/examples/: README.md  langgraph.json  pyproject.toml
ag-ui/integrations/langgraph/python/tests/: _helpers.py  test_a2ui_tool.py  test_active_run_invariants.py  test_clone.py  test_cr_defensive_fallbacks.py  test_deprecation_warnings.py  test_dump_json_safe.py  test_emit_events.py  test_endpoint_health_path.py  test_get_checkpoint_before_message.py  test_get_schema_keys.py  test_get_stream_kwargs.py  test_interrupt_handling.py  test_make_json_safe.py  test_message_conversion.py  test_multimodal.py  test_nested_tool_end_dedup.py  test_on_tool_end_non_toolmessage.py  test_orphan_tool_message_merge.py  test_oss28_sse_drop_recovery.py  test_parallel_tool_calls.py  test_predict_state_e2e.py  test_prepare_regenerate_stream_config.py  test_prepare_stream_edited_message.py  test_prepare_stream_interrupt_resume.py  test_reasoning_canonical_id.py  test_reasoning_content.py  test_resume_input.py  test_run_id_preservation.py  test_stable_message_id.py  test_state_merging.py  test_state_streaming_middleware.py  test_subclass_hooks.py  test_subgraph_streaming.py
ag-ui/integrations/langroid/python/: .gitignore  README.md  pyproject.toml
ag-ui/integrations/langroid/python/examples/: .gitignore  pyproject.toml
ag-ui/integrations/langroid/python/tests/: test_agent.py  test_endpoint.py  test_types.py
ag-ui/integrations/server-starter-all-features/python/examples/: pyproject.toml
ag-ui/integrations/server-starter/python/examples/: pyproject.toml
ag-ui/integrations/watsonx/python/: README.md  pyproject.toml
ag-ui/integrations/watsonx/python/tests/: test_agent.py
ag-ui/sdks/community/c++/: .gitignore  CMakeLists.txt  README.md
ag-ui/sdks/community/c++/tests/: CMakeLists.txt  http_request_builder.h  test_activity_events.cpp  test_agent_error.cpp  test_apply_module.cpp  test_event_handler.cpp  test_event_parser.cpp  test_event_verifier.cpp  test_http_agent.cpp  test_middleware.cpp  test_sse_parser.cpp  test_sse_server.cpp  (+1 more)
ag-ui/sdks/python/: README.md  pyproject.toml
ag-ui/sdks/python/a2ui_toolkit/: README.md  pyproject.toml
ag-ui/sdks/python/tests/: test_capabilities.py  test_capabilities_interrupts.py  test_events.py  test_interrupts.py  test_run_finished_event.py  test_text_roles.py  test_types.py
(+1517 files in other folders)
