[project]
name = "ag-ui-protocol"
version = "0.1.19"
description = ""
license-files = ["LICENSE"]
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.2",
]

[tool.ag-ui.scripts]
test = "python -m unittest discover tests"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "ag_ui"
