[project]
name = "ag_ui_watsonx"
version = "0.0.1"
description = "AG-UI integration for IBM watsonx orchestrate agents"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AG-UI Contributors" }
]
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "ag-ui-protocol>=0.1.15",
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui_watsonx"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
]
