[project]
name = "server"
version = "0.1.0"
description = "Example usage of the AG-UI adapter for Claude Agent SDK"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-claude-sdk",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[tool.uv.sources]
ag-ui-claude-sdk = { path = "../", editable = true }

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
