[project]
name = "example-server"
version = "0.1.0"
description = ""
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "jsonpatch>=1.33",
]

[tool.uv.sources]
ag-ui-protocol = { path = "../../../../sdks/python/" }

[project.scripts]
dev = "example_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_server"]
