[project]
name = "example-server"
version = "0.1.0"
description = ""
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ag-ui-protocol>=0.1.5",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]

[project.scripts]
dev = "example_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example_server"]
